<resources>
    <string name="app_name">parcial</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cancel">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="institucion">UNDEF - IUA</string>
    <string name="txt_recuperar_pass">Recuperar Contraseña</string>
    <string name="fullName">Nombre completo</string>
    <string name="password">Contraceña</string>
    <string name="repeat_password">Repetir contraceña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="email">E-mail</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>